--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,10 +2,11 @@
   "editor.codeActionsOnSave": {
     "source.fixAll": "explicit",
     "source.organizeImports": "explicit",
-    "source.sortMembers": "explicit",
-
+    "source.sortMembers": "explicit"
   },
   "css.styleSheets": ["./app/global.css"],
-
-  
+  "files.associations": {
+    "*.css": "tailwindcss"
+  },
+  "tailwindCSS.classAttributes": ["class", "className", "headerClassName"]
 }
